# fastapi_book

./: README.md  database.py  main.py  pyproject.toml
auth/: auth.py
config/: db_config.py  env_config.py
crud/: user_crud.py
data/: crud.py  database.py  models.py
data/crud/: book_crud.py  crud.py  user_crud.py
data/models/: book_models.py  models.py  user_models.py
data/schemas/: schemas.py
router/: admin_router.py  book_router.py  router.py  user_router.py
router/admin/: admin_router.py
router/book/: book_router.py
router/users/: user_router.py
schemas/: book_schemas.py  user_schemas.py
test/: book_test.py  set_up_test.py  test.py  user_test.py
