[tool.poetry]
name = "book-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "^4.1.2"
fastapi = "^0.110.0"
datetime = "^5.4"
jose = "^1.0.0"
typing-extensions = "^4.10.0"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
